# hypermnesic

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE  README.md  SECURITY.md  glama.json  implementation-notes.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: 2026-06-03-blocklist-write-surface-security-review.md  2026-06-03-unified-write-anywhere-security-review.md  README.md  cloud-oauth-mcp-deploy-runbook.md  gbrain-decommission-STATE-2026-06-03.md  handoff-macbook-gate-A-completion.md  handoff-macbook-plugin-update.md  handoff-macbook-prompt.md  oauth-as-finding.md  threat-model-commit-note.md  unified-oauth-mcp-deploy-runbook.md  why-hypermnesic.md
docs/archive/: 2026-06-02-deployment-topology-write-model-requirements.md  2026-06-02-gate-A-rollout-runbook.md  cloud-oauth-mcp-deploy-runbook.md
docs/assets/: readme-local-proof.cast
docs/brainstorms/: 2026-06-02-cloud-oauth-mcp-mobile-requirements.md  2026-06-02-deployment-topology-write-model-requirements.md  2026-06-02-gbrain-decommission-requirements.md  2026-06-02-longmemeval-benchmark-protocol-requirements.md  2026-06-02-obsidian-community-directory-publishing-requirements.md  2026-06-02-obsidian-companion-first-class-ui-requirements.md  2026-06-02-obsidian-companion-plugin-redesign-requirements.md  2026-06-02-phase-2-5-fresh-recall-requirements.md  2026-06-03-first-class-documentation-requirements.md  2026-06-03-unified-oauth-endpoint-and-setup-requirements.md  2026-06-03-vault-structure-discovery-and-blocklist-write-model-requirements.md  2026-06-04-first-class-product-requirements.md  2026-06-07-hypermnesic-incremental-doc-surface-invalidation.md  2026-06-08-dense-retrieval-reliability-requirements.md  2026-06-12-list-folders-agent-instructions-requirements.md  2026-06-15-launch-demo-assets-requirements.md  2026-06-19-automated-cd-release-publish-requirements.md  2026-06-25-founder-essay-and-crossposts-requirements.md  2026-06-25-low-friction-deploy-requirements.md  2026-06-25-mcp-directory-distribution-requirements.md  2026-06-25-obsidian-pkm-channel-requirements.md  2026-06-25-readme-rewrite-one-brain-every-ai-requirements.md
docs/gate-artifacts/: 2026-06-02-gate-1-foundation.md  2026-06-02-gate-2-safe-to-go-live.md  2026-06-02-gate-3-release-and-canary.md  2026-06-02-gate-A-plugin-and-oauth.md  2026-06-02-gate-A-rollout-runbook.md
docs/guides/: consent-and-clients.md  daily-workflows.md  demo-asset-frame-review-checklist.md  getting-started.md  memory-control.md  memory-taxonomy.md  remote-client-smoke-checklist.md
docs/handoffs/: 2026-06-02-companion-directory-publishing-U9-U10-handoff.md
docs/ideation/: 2026-06-05-dreaming-mode-ideation.md
docs/launch/: CITATION.cff  directory-submission-prep.md  discussions-roadmap-prep.md  first-class-product-readiness-checklist.md  launch-narrative-drafts.md  launch-sequencing.md  (+11 more)
harness/: BENCHMARKS.md  PARITY_VERDICT.md  build_query_set.py  capture_gbrain_baseline.py  corpus_equivalence.py  dogfood_commit_note.py  gate_audit.py  judge_labels.py  label_review.py  parity_harness.py  portability_probe.py  queries.example.jsonl
media/: .review-log.md  README.md
obsidian-plugin/: README.md  main.ts  manifest.json  package-lock.json  package.json  styles.css
plugin/: README.md
scripts/: check_version_consistency.py  license_scan.py  preflight_public_scan.py  product_smoke.py
tests/: conftest.py  test_audit_log.py  test_auth.py  test_auth_cloud.py  test_auth_server.py  test_blocklist_write_gate.py  test_capture.py  test_cli.py  test_client_control.py  test_client_guidance.py  test_commit_note.py  test_config.py  test_connect.py  test_converge.py  test_corpus_equivalence.py  test_daily_review.py  test_doctor.py  test_dogfood.py  test_embed_stale.py  test_expand.py  test_folders.py  test_frontmatter_gate.py  test_gate_audit.py  test_graph.py  test_hermes_plugin.py  test_hermes_plugin_hook.py  test_index.py  test_index_projection.py  test_install.py  test_judge_labels.py  test_label_review.py  test_license_scan.py  test_local_proof.py  test_longmemeval_harness.py  test_mcp_server.py  test_memory_control.py  test_nav_surface.py  test_obsidian_plugin.py  test_parity_harness.py  test_plugin.py  (+15 more)
(+136 files in other folders)
