[project]
name = "hypermnesic"
version = "0.0.1"
description = "A markdown-native, git-as-source-of-truth memory layer: a disposable, rebuildable retrieval index over any repository, exposed read-only over a tailnet-only MCP server."
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Leonard Sellem" }]
# Permissive primitives only (KTD1). The U1 license gate (scripts/license_scan.py)
# fails the build on any AGPL / GPL / SSPL transitive dependency.
dependencies = [
    "sqlite-vec>=0.1.6",   # Apache-2.0 / MIT — KNN MATCH virtual table
    "openai>=1.30",        # Apache-2.0 — text-embedding-3-large @ dimensions=1536
    "mcp>=1.2",            # MIT — official Model Context Protocol Python SDK
    "ruamel.yaml>=0.18",   # MIT — round-trip-preserving YAML (Phase-1 frontmatter gate)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pip-licenses>=5.0",   # MIT — transitive license scan for the U1 gate
]
# U19 multi-format sidecar extractors — permissive only (KTD4). The license gate
# (scripts/license_scan.py) MUST stay clean with these installed: zero AGPL/GPL/SSPL.
# Explicitly NOT PyMuPDF (AGPL) or Marker (GPL + revenue-gate).
sidecar = [
    "docling>=2.0",        # MIT — complex/scanned/table/equation PDFs + image layout
    "markitdown>=0.0.1",   # MIT — DOCX/PPTX and fast/simple PDF/XLSX
    "pypdf>=4.0",          # BSD — permissive scanned-vs-native + page probe (NOT PyMuPDF)
    "pdfplumber>=0.11",    # MIT — permissive table-density heuristic
]

[project.scripts]
hypermnesic = "hypermnesic.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hypermnesic"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
